syntax = "proto2";

///////////////////////////////////////////////////////////////////////////////
// Message IDs
///////////////////////////////////////////////////////////////////////////////

// GlobalData
enum GlobalProtoID
{
    REQ_GET_PLAYER_MAX_SCORE            = 100001; //拉玩家最高分
    RSP_GET_PLAYER_MAX_SCORE            = 100002; //返回的协议号

    // ranklist
    REQ_PLAYER_RANKLIST             = 100003;    // 拉取玩家的人口排行
    RSP_PLAYER_RANKLIST             = 100004;    // 返回玩家的人口排行

    REQ_UPDATE_PLAY_MAX_SCORE       = 100005;    //  更新玩家的人口分数

    REQ_GET_PLAYER_NEARBY_RANK      = 100006;    //  拉取玩家附近排行
    RSP_GET_PLAYER_NEARBY_RANK      = 100007;    //  返回玩家附近排行

}

// GameData
enum GameProtoID
{
    REQ_PLAYER_ACTION                   = 200001; //
    INF_PLAYER_ACTION                   = 200002; //广播/通知玩家的操作

    REQ_UPDATE_PLAYER_MAX_SCORE         = 200003;
}

///////////////////////////////////////////////////////////////////////////////
// GlobalData Message Structures
///////////////////////////////////////////////////////////////////////////////


// RSP_GET_PLAYER_MAX_SCORE
message RspGetPlayerMaxScore {
    required int32 itype = 1;
    required int32 score = 2;
}

 // REQ_PLAYER_RANKLIST
message ReqPlayerRankList{
    required int32 itype = 1;
    required int32 beginRank = 2;
    required int32 len = 3;
}

message RankEntry{
    required int32 uin = 1;
    required int32 rank = 2;
    required int32 score = 3;
}
 // RSP_PLAYER_RANKLIST
message RspPlayerRankList{
    required int32 itype = 1;
    required RankEntry playerEntry = 2;
    repeated RankEntry entryList = 3;
}

//  REQ_GET_PLAYER_NEARBY_RANK 
message ReqGetPlayerNearbyRank{
    required int32 itype=1;
}     

///////////////////////////////////////////////////////////////////////////////
// GameData Message Structures
///////////////////////////////////////////////////////////////////////////////

// REQ_PLAYER_ACTION
message ReqPlayerAction {
    required int32 action = 1;
}

// INF_PLAYER_ACTION
message InfPlayerAction {
    required int32 uin = 1;
    required int32 action = 2;
}

//REQ_UPDATE_PLAYER_MAX_SCORE
message ReqUpdatePlayerMaxScore{
    required int32 itype = 1;
    required int32 score = 2;
}